--- a/index.html
+++ b/index.html
@@ -411,21 +411,21 @@
                     <form>
                       <div class="mb-3">
                         <label for="fullname" class="form-label">Full Name</label>
-                        <input type="text" class="form-control" id="fullname" placeholder="Full Name">
+                        <input type="text" class="form-control" id="fullname" placeholder="Your Name">
                       </div>
                       <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@email.com">
                       </div>
                       <div class="mb-3">
                         <label for="mobile" class="form-label">Mobile Number</label>
-                        <input type="number" class="form-control" id="mobile" placeholder="Mobile Number">
+                        <input type="number" class="form-control" id="mobile" placeholder="+63 900 000 000">
                       </div>
                       <div class="mb-3">
                         <label for="message" class="form-label">Message</label>
                         <textarea type="text" class="form-control" id="message" placeholder="Message" rows="3"></textarea>
                       </div>
-                      <button type="button" class="btn btn-outline-danger btn-custom rounded-pill mb-3 px-5" data-bs-toggle="modal" data-bs-target="#modalDiv">Send Email</button>
+                      <button type="button" class="btn btn-outline-danger btn-custom rounded-pill mb-3 px-5" data-bs-toggle="modal" data-bs-target="#modalDiv">Submit</button>
                     </form>
                 </div>
 
