--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- Animation | CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -56,9 +57,9 @@
 
 	<!-- Header Section Start -->
 	<div id="landing">
-		<div class="container-fluid text-center aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+		<div class="container text-center aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
 			<div class="row d-flex justify-content-center align-items-end">
-				<div class="col-xl-5 col-lg-6 col-12 py-lg-4" data-aos="fade-right">
+				<div class="col-xl-8 col-lg-8 col-12 py-lg-4" data-aos="fade-right">
 					<h1 class="title mt-5">Hi, Im Jean Brinas</h1>
 					<h3 class="subtitle py-sm-2">I'm a <span>Full-Stack Developer</span></h3>
 					<a href="#contacts"><button type="button" class="btn btn-outline-danger btn-custom my-5 rounded-pill px-5">Contact Me</button></a>
@@ -68,7 +69,6 @@
 				</div>
 			</div>	
 		</div>
-		
 	</div>
 	<!-- Header Section End -->
 
@@ -100,7 +100,7 @@
 		<div class="container py-5" >
 			<div class="row">
 				<div class="col-12">
-					<h2 class="mb-4">My Works</h2>
+					<h2 class="mb-4">Portfolio</h2>
 					<hr>
 					<div class="d-lg-flex justify-content-center p-md-5">
 						
@@ -465,7 +465,7 @@
 	<!-- Contact End -->
 
 	<!-- Footer Start -->
-	<footer class="bg-dark">
+	<footer>
         <div class="container d-md-flex justify-content-md-between py-3 ">
             <div class="mb-3 mb-md-0 d-flex justify-content-center">
             	<a class="text-decoration-none" target="_blank" href="https://www.facebook.com/jeanbrinas">
